# hacktowork-2025

./: README.md  compose.yaml
api/: .gitignore  Dockerfile  hacktowork.db  publisher.py  pyproject.toml  subscriber.py
api/app/: __init__.py  config.py  listener.py
api/app/controllers/: banho.py
api/app/models/: banho.py
api/app/repositories/: __init__.py  banho.py
api/app/services/: banho.py  message.py
api/app/templates/: index.html
client/hacktowork2025-client/: index.html  package-lock.json  package.json
client/hacktowork2025-client/src/: App.jsx
client/hacktowork2025-client/src/charts/: BulletChart.jsx  area.jsx  line.jsx
client/hacktowork2025-client/src/components/: BanhoList.jsx  BorderedList.jsx  ChartWrapper.jsx
client/hacktowork2025-client/src/services/: banho.js
client/hacktowork2025-client/src/utils/: time.js
firmware/: .gitignore
firmware/include/: secrets_example.h
firmware/lib/Buzzer/: Buzzer.cpp  Buzzer.h
firmware/lib/FlowSensor/: FlowSensor.cpp  FlowSensor.h
firmware/lib/Led/: Led.cpp  Led.h
firmware/lib/NetworkManager/: NetworkManager.cpp  NetworkManager.h
firmware/src/: main.cpp
subscriber/: .dockerignore  Dockerfile  README  config.py  main.py  pyproject.toml
