[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-migrate>=4.1.0",
    "flask-socketio>=5.6.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2>=2.9.11",
    "redis>=7.1.0",
]
